--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.1",
