--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
   "main": "server.js",
-  
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js"
@@ -32,7 +31,9 @@
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "tesseract.js": "^2.1.4"
   }
 }
