--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.1",
     "multer": "^1.4.2",
